# Python-Robocode

./: .gitignore  .pre-commit-config.yaml  .pylintrc  linter-report.txt  pyproject.toml
python_robocode/: main.py
python_robocode/GUI/: RobotInfo.py  Ui_RobotInfo.py  Ui_battle.py  Ui_outPrint.py  Ui_window.py  battle.py  outPrint.py  scrolltext.py  window.py
python_robocode/Objects/: animation.py  bullet.py  graph.py  physics.py  radarField.py  robot.py  statistic.py
python_robocode/Robots/: T800.py  charlier.py  coin.py  demo.py  target.py  track_target.py  wall_runner.py  wall_tt.py
