[tool.poetry]
name = "python-robocode"
version = "0.1.0"
description = "A Fork of Robocode for python programming"
authors = ["Felipe Bastos Nunes <felipebastos@ifce.edu.br>"]
readme = "README.md"
packages = [{include = "python_robocode"}]

[tool.taskipy.tasks]
audit = { cmd = 'pip-audit', help = "Verify for security breaches on project's dependencies." }
secure = { cmd = 'bandit -r python_robocode', help = "Verify for security breaches on project's code." }
imports = { cmd = 'isort .', help = 'Order imports.' }
format = { cmd = 'task imports & black .', help ='Order imports and format code with black formatter.'}
lint = { cmd = 'pylint -f text . > linter-report.txt', help = 'Static lint.' }
onboard = { cmd = 'pre-commit install', help = 'Install pre-commit hooks.' }
test = { cmd = 'pytest', help = 'Run tests.' }
prospect = { cmd = 'prospector', help = 'Verify security, complexity, etc.' }
run = { cmd = 'python python_robocode/main.py', help = 'Runs on development environment.'}

[tool.poetry.dependencies]
python = "^3.10"
PyQt5 = "^5.15.9"

[tool.poetry.group.dev.dependencies]
taskipy = "^1.11.0"
black = "^23.3.0"
isort = "^5.12.0"
pre-commit = "^3.3.2"
pylint = "^2.17.4"
coverage = "^7.2.7"
bandit = "^1.7.5"
pip-audit = "^2.5.6"
prospector = "^1.10.2"
pytest-cov = "^4.1.0"
pytest = "^7.3.1"

[tool.isort]
profile='black'

[tool.black]
include = '\.pyi?$'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
